tests/miniJava/neg/006430_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { while new 0 ) { } } }
